# logistics-and-distribution

./: .gitignore  DynamicTable.js  LICENSE  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/algo/MiddlemanSolverAlgo.js/: Middleman.js
client/public/: index.html
client/src/: App.module.css
client/src/algo/: Middleman.js  MiddlemanSolverAlgo.js
client/src/components/: DistributionSolver.js  DistributionSolver.module.css  DynamicDistributionTable.js  DynamicTable.js  DynamicTable.module.css  DynamicTableB.js  ErrorBoundary.js  MainContent.js  MiddlemanResult.js  MiddlemanSolver.js  Navbar.js  Navbar.module.css
server/: .pdm.toml  README.md  compute_distribution.py  main.py  pulped.py  pyproject.toml  tempCodeRunnerFile.py
server/api/routes/: api.py  sample.py
src/: App.js  App.module.css
src/components/: DistributionSolver.js  DynamicTable.js  MainContent.js  MainContent.module.css  MiddlemanSolver.js  Navbar.js  Navbar.module.css
