[project]
name = ""
version = ""
description = ""
authors = [
    {name = "shoomilas", email = "josh.molais@gmail.com"},
]
dependencies = [
    "fastapi~=0.65",
    "uvicorn~=0.13",
    "pulp~=2.4",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
