[tool.poetry]
name = "lad-server"
version = "0.1.0"
description = ""
authors = ["shoomilas"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
PuLP = "^2.6.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
